k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monkstore-backend
  namespace: monkstore-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monkstore-backend
  template:
    metadata:
      labels:
        app: monkstore-backend
    spec:
      containers:
        - name: backend
          image: monkstore-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: monkstore-lab
spec:
  selector:
    app: monkstore-backend
  ports:
    - port: 3000
      targetPort: 3000
