k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: monkstore-db
  namespace: monkstore-lab
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: monkstore-db
  template:
    metadata:
      labels:
        app: monkstore-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
            initialDelaySeconds: 5
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: monkstore-lab
spec:
  selector:
    app: monkstore-db
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
